--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,6 +14,7 @@
 <h1>Comprobantes de depositos</h1>
 <% end %>
 <h1> <%= link_to "Compras", pdcs_path %> </h1>
+<h1> <%= link_to "Pagos", pagos_path %> </h1>
 
 <% if !current_user.nil? %>
   <% if current_user.rol == "admin" %>
